[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/LevelScripts/Level09BossControl.gd" type="Script" id=1]
[ext_resource path="res://Scenes/PlayerScenes/PlayersNew/PlayerSingle.tscn" type="PackedScene" id=2]
[ext_resource path="res://OtherHolder/rm-albion/RM Albion font big.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/LevelScripts/Level09BossComplete.gd" type="Script" id=4]
[ext_resource path="res://Scenes/LevelScenes/LevelExtras/LevelEndParticles.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/LevelScenes/BaseScenes/LightHousePart04Sanctum.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/EnemyScenes/CreatureBoss.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/EnemyScenes/Sorceror.tscn" type="PackedScene" id=8]
[ext_resource path="res://Music/MusicControllerBoss.gd" type="Script" id=9]
[ext_resource path="res://Music/Aggressor.ogg" type="AudioStream" id=10]
[ext_resource path="res://Music/Burnt Spirit.ogg" type="AudioStream" id=11]
[ext_resource path="res://Music/Outfoxing the Fox.ogg" type="AudioStream" id=12]

[sub_resource type="Environment" id=1]

background_mode = 1
background_sky_custom_fov = 0.0
background_color = Color( 0.110107, 0, 0.171875, 1 )
background_energy = 0.5
background_canvas_max_layer = 0
ambient_light_color = Color( 0.276418, 0.0686646, 0.351563, 1 )
ambient_light_energy = 0.5
ambient_light_sky_contribution = 1.0
fog_enabled = true
fog_color = Color( 0.578125, 0.124207, 0.571033, 1 )
fog_sun_color = Color( 1, 0.9, 0.7, 1 )
fog_sun_amount = 0.0
fog_depth_enabled = true
fog_depth_begin = 15.0
fog_depth_curve = 1.0
fog_transmit_enabled = false
fog_transmit_curve = 1.0
fog_height_enabled = false
fog_height_min = 0.0
fog_height_max = 100.0
fog_height_curve = 1.0
tonemap_mode = 0
tonemap_exposure = 1.0
tonemap_white = 1.0
auto_exposure_enabled = false
auto_exposure_scale = 0.4
auto_exposure_min_luma = 0.05
auto_exposure_max_luma = 8.0
auto_exposure_speed = 0.5
ss_reflections_enabled = false
ss_reflections_max_steps = 64
ss_reflections_fade_in = 0.15
ss_reflections_fade_out = 2.0
ss_reflections_depth_tolerance = 0.2
ss_reflections_roughness = true
ssao_enabled = false
ssao_radius = 1.0
ssao_intensity = 1.0
ssao_radius2 = 0.0
ssao_intensity2 = 1.0
ssao_bias = 0.01
ssao_light_affect = 0.0
ssao_color = Color( 0, 0, 0, 1 )
ssao_quality = 0
ssao_blur = 3
ssao_edge_sharpness = 4.0
dof_blur_far_enabled = false
dof_blur_far_distance = 10.0
dof_blur_far_transition = 5.0
dof_blur_far_amount = 0.1
dof_blur_far_quality = 1
dof_blur_near_enabled = false
dof_blur_near_distance = 2.0
dof_blur_near_transition = 1.0
dof_blur_near_amount = 0.1
dof_blur_near_quality = 1
glow_enabled = false
glow_levels/1 = false
glow_levels/2 = false
glow_levels/3 = true
glow_levels/4 = false
glow_levels/5 = true
glow_levels/6 = false
glow_levels/7 = false
glow_intensity = 0.8
glow_strength = 1.0
glow_bloom = 0.0
glow_blend_mode = 2
glow_hdr_threshold = 1.0
glow_hdr_scale = 2.0
glow_bicubic_upscale = false
adjustment_enabled = false
adjustment_brightness = 1.0
adjustment_contrast = 1.0
adjustment_saturation = 1.0
_sections_unfolded = [ "Ambient Light" ]

[sub_resource type="BoxShape" id=2]

extents = Vector3( 7.08577, 3.2806, 1 )

[node name="Level09Boss" type="Spatial"]

script = ExtResource( 1 )

[node name="RespawnPoint" type="Spatial" parent="." index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -15.1728, 1.20421, -0.177898 )

[node name="Player" parent="." index="1" instance=ExtResource( 2 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -16.5357, 1.06086, 0.376421 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="." index="2"]

environment = SubResource( 1 )

[node name="LevelObjective" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_bottom = 51.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "LongTestToMakeSureItWillFitAndBeCentered"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="EndOfLevel" type="Spatial" parent="." index="4"]

editor/display_folded = true
transform = Transform( 0.99997, 0, -0.00779381, 0, 1, 0, 0.00779381, 0, 0.99997, -0.177752, -0.178004, -14.3363 )
script = ExtResource( 4 )

[node name="Area" type="Area" parent="EndOfLevel" index="0"]

input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape" type="CollisionShape" parent="EndOfLevel/Area" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.80655, 0.368965 )
shape = SubResource( 2 )
disabled = false

[node name="LevelEndParticles" parent="EndOfLevel/Area" index="1" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.421509, -56.8543 )

[node name="EndOfLevelShow" type="Spatial" parent="." index="5"]

transform = Transform( 0.999213, 0, -0.0396748, 0, 1, 0, 0.0396748, 0, 0.999213, -0.145157, -0.178004, -14.3407 )

[node name="EndOfLevelHide" type="Spatial" parent="." index="6"]

transform = Transform( 0.999213, 0, -0.0396748, 0, 1, 0, 0.0396748, 0, 0.999213, -0.145157, -21.9197, -14.3407 )

[node name="LightHousePart04Sanctum" parent="." index="7" instance=ExtResource( 6 )]

[node name="EnemyHolder" type="Spatial" parent="." index="8"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.781893, 11 )

[node name="CreatureBoss" parent="EnemyHolder" index="0" instance=ExtResource( 7 )]

transform = Transform( -0.0439426, 0, -0.999034, 0, 1, 0, 0.999034, 0, -0.0439426, 14, 0.274801, -5 )

[node name="Sorceror" parent="EnemyHolder" index="1" instance=ExtResource( 8 )]

transform = Transform( -0.0882771, 0, -0.996096, 0, 1, 0, 0.996096, 0, -0.0882771, 8, 0, 0 )

[node name="MusicControllerBoss" type="Node" parent="." index="9"]

editor/display_folded = true
script = ExtResource( 9 )

[node name="AudioStreamA" type="AudioStreamPlayer" parent="MusicControllerBoss" index="0"]

stream = ExtResource( 10 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "MusicBus"

[node name="AudioStreamBS" type="AudioStreamPlayer" parent="MusicControllerBoss" index="1"]

stream = ExtResource( 11 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "MusicBus"

[node name="AudioStreamOtF" type="AudioStreamPlayer" parent="MusicControllerBoss" index="2"]

stream = ExtResource( 12 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "MusicBus"

[connection signal="finished" from="MusicControllerBoss/AudioStreamA" to="MusicControllerBoss" method="_on_AudioStreamA_finished"]

[connection signal="finished" from="MusicControllerBoss/AudioStreamBS" to="MusicControllerBoss" method="_on_AudioStreamBS_finished"]

[connection signal="finished" from="MusicControllerBoss/AudioStreamOtF" to="MusicControllerBoss" method="_on_AudioStreamOtF_finished"]


